Fix typo in i18n

--- a/_i18n/id.yml
+++ b/_i18n/id.yml
@@ -49,7 +49,7 @@ footer:
   privacy: Kebijakan Privasi
   tos: Syarat Pelayanan
   newsletter: surat kabar
-  Ifsub: Jika Anda ingin berlangganan surat kabar kami, silahkan kirimkan formulir.
+  ifsub: Jika Anda ingin berlangganan surat kabar kami, silahkan kirimkan formulir.
   email: Email
   sub: Berlangganan
   comm: komunikasi
