--- a/_i18n/id.yml
+++ b/_i18n/id.yml
@@ -48,10 +48,9 @@ footer:
   website: situs web
   privacy: Kebijakan Privasi
   tos: Syarat Pelayanan
-  newsletter: surat kabar
-  ifsub: Jika Anda ingin berlangganan surat kabar kami, silahkan kirimkan formulir.
-  email: Email
-  sub: Berlangganan
+  newsletter: news
+  ifsub: Check out our Telegram channel to stay up to date on Firo news.
+  newsbutton: Read news
   comm: komunikasi
   
 home:
