Added Stack Wallet to Downloads page

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -118,6 +118,7 @@ download:
   campfiremob: Campfire Wallet
   downloadmobcamp: Download for Android
   downloadioscamp: Download for iOS
+  stackwalletmob: Stack Wallet
   wallets: third-party wallets
 
 buyfiro:
