--- a/_i18n/id.yml
+++ b/_i18n/id.yml
@@ -118,6 +118,7 @@ download:
   campfiremob: Dompet Campfire
   downloadmobcamp: Unduh untuk Android
   downloadioscamp: Unduh untuk iOS
+  stackwalletmob: Stack Wallet
   wallets: dompet pihak ketiga
 
 buyfiro:
