--- a/_i18n/zh-cn.yml
+++ b/_i18n/zh-cn.yml
@@ -118,6 +118,7 @@ download:
   campfiremob: Campfire 钱包
   downloadmobcamp: Download for Android
   downloadioscamp: Download for iOS
+  stackwalletmob: Stack Wallet
   wallets: 第三方钱包
 
 buyfiro:
