merchants: remove broken links and add alt text to images (#262)

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -297,4 +297,5 @@ merchants:
   button12: Software
   button13: Travel
   button14: VPN
+  nothing: Nothing to see here. Do you know a merchant listing Firo? Let us know!
   
