social: add i18n, lazy loading and alt texts

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -299,3 +299,6 @@ merchants:
   button14: VPN
   nothing: Nothing to see here. Do you know a merchant listing Firo? Let us know!
   
+social:
+  community: Community
+  findus: You can also find us here
