--- a/_config.yml
+++ b/_config.yml
@@ -19,5 +19,5 @@ paginate: 6
 paginate_path: "/blog/page:num/"
 
 # jekyll-multiple-languages-plugin settings:
-languages: ["en", "zh-cn", "id"]
+languages: ["en", "zh-cn", "id", "ms"]
 exclude_from_localizations: ["img", "css", "fonts", "feed.xml", "_posts", "blog"]
