Rebase on proper master and accompanying styling changes

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -48,10 +48,10 @@ footer:
   website: Website
   privacy: Privacy Policy
   tos: Terms Of Service
-  newsletter: news
+  newsletter: News
   ifsub: Check out our <a href="/blog/">Blog</a> and Telegram channel to stay up to date on Firo news.
   newsbutton: Read news
-  comm: communication
+  comm: Communication
   feed: Feed RSS
 
   
