--- a/_i18n/id.yml
+++ b/_i18n/id.yml
@@ -269,7 +269,7 @@ roadmap:
   elysiumdesc: Elysium memungkinkan token (misalnya stablecoin, koin yang didukung aset) akan dikeluarkan di jaringan Firo yang akan mendapat manfaat dari teknologi privasi Firo.
   elysiumv2: Elysium v2
   elysiumv2desc: Elysium v2 memperluas kemampuan Elysium dengan kemampuan menjembatani jaringan dan integrasi DeFi yang lebih mudah. Elysium v2 juga akan mengimplementasikan Spats yang akan menyembunyikan jenis aset yang sedang ditransfer.
-  lelantusspark: Lelantus Spark (sedang berlangsung)
+  lelantusspark: Lelantus Spark (selesai)
   lelantussparkdesc: Lelantus Spark memungkinkan pembayaran anonim langsung yang memungkinkan pengguna untuk bertransaksi satu sama lain tanpa mengungkapkan jumlah, sumber, dan penerima. Spark memperkenalkan alamat Spark yang memungkinkan pengguna untuk menyembunyikan dana mereka sepenuhnya bersama dengan kunci tampilan penuh dan dukungan multisig.
   mobile: Dompet Ponsel (selesai)
   mobiledesc: Dompet seluler asli, pribadi secara default yang akan memiliki dukungan transaksi Lelantus penuh.
